# configurator-example

./: README.md  configurator-example.cabal  ex.cfg
src/: Main.hs
