name:                configurator-example
version:             0.1.0.0
synopsis:            A very simple example of using configurator for one's project
description:         A very simple example of using configurator for one's project
homepage:            http://github.com/alpmestan/configurator-example
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari <alpmestan@gmail.com>
maintainer:          Alp Mestanogullari <alpmestan@gmail.com>
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

executable configurator-example
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >= 4 && < 5, 
                       configurator,
                       filepath,
                       text
  ghc-options:         -O2 -Wall
  hs-source-dirs:      src